Não incluir informações adicionais em branco (whitespace)